# YOLO-X-server

./: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  config.py  kubernetes_manifest.yml  pyproject.toml  requirements.txt  server.py  test_server.py
controllers/: detection.py  functions.py  utils.py
routes/: detection.py  detection_depends.py
src/: config.py
src/controllers/: detection.py
src/routes/: detection.py
